<resources>
    <string name="app_name">Varna Tour Guide App</string>
    <string name="list_item_icon">list item icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_museums">Museums</string>
    <string name="category_accommodation">Sleep</string>
    <string name="category_culture">Culture</string>
    <string name="category_fun">Fun</string>
    <string name="avatar">avatar</string>
    <string name="yo_ho_hostel">Yo-Ho-Hostel</string>
    <string name="yoho_address">23, \"Russe\" Str.\nwww.yohohostel.com</string>
    <string name="yoho_description">
        Yo-Ho-Hostel - most popular place in the heart of Varna ! Hostel for backpackers, explorers, musicians and artists!\n
        OPEN ALL YEAR ROUND AND 24/7 !
        \n\n
        Yo-Ho-Hostel - 12th Years we offer you the BEST PRICE in Varna ! Come, check and stay longer than you expect!
        Most central, most friendly, most funny …
        \n\n
        Top rated hostel in Varna since 2007 from www.hostelworld.com! Sleep Easy !
        Best recommended hostel in Varna from \'Lonely Planet\' Guide Book 2008, 2009 ,2011 and 2015 !
        The only hostel in Varna recommended from \'Le Guide du Routard\' from 2008 till 2016 !
        \n\n
        Yo-Ho-Hostel is the most central place for accommodation in Varna! Every young and alternative looking person in the city
        can tell you where Yo-Ho-Hostel is situated.\n
        The address is 23, Ruse Street and here you will see a colorful door with a lot of graffiti art \' this is Yo-Ho-Hostel!
        Our GPS coordinates are: 43*12.216 N , 027*54.619 E
        \n\n
        You can use :\n
        -fully equipped self-catering kitchen\n
        -laundry and drying service\n
        -iron and ironing board\n
        -relaxing quiet garden\n
        -BBQ\n
        -Bar\n
        -Smoking area\n
        -Board games area\n
        -Exchange library\n
        -Guide books for hire\n
        - Bikes for hire\n
        - Table football and Arcanoid game\n
        - Security camera control\n
        OUR BATHROOMS ARE COMBO WITH WC\n
        If you don\'t like boring places!\n
        We will always give you an option to do something fun and interesting.\n
        For travelers, who like cultural activities you can find:\n
        -guided trips around Varna museums and art galleries\n
        -guided day trips to more than 20 interesting natural and historical sites\n
        -visiting Varna film, music and cultural festivals\n
        For alternative backpackers:\n
        -Bungy jumping from a 52 m high bridge\n
        -Boat trip with pirate’s ship “Pinta Varna” with fishing on the way\n
        -SCUBA diving for beginners and professionals\n
        -Kite, wind, long and skim board surfing close to Varna\n
        -Once per year - 3 days kayaking trip with sleeping in tents\n
        We are in perfect relation with our friends hostels in Bulgaria!\n
        Sozopol: Yo-Ho-Hostel - summer hostel\n
        Veliko Tarnovo: Hostel Mostel\n
        Sofia: Art Hostel -Usually we spend our time in the garden\n
        Sofia: Hostel Mostel\n
        Plovdiv: Hostel Old Plovdiv\n
        Burgas: Hostel A16\n
        Ruse: The English Guest house
        \n\n
        This is Yo-Ho-Hostel - culture and alternative, obligatory place for every backpacker who wants to explore Varna, Bulgaria!
        \n\n
        Welcome aboard!</string>
    <string name="del_mar_hostel">Hostel Del Mar</string>
    <string name="del_mar_address">29, \"Krajbrezhna\" Str.</string>
    <string name="del_mar_description">
        BBQ or meet new friends in our beautiful garden with roses and wineyard Camping for 5 euro p.p.!\n
        Our cosy hostel has the unbeatable location to relax fully and explore the urban atmosphere and Varna\'s nightlife in the same
        time.We are 10-15 mins with the city bus to the center of Varna- the main Cathedral.\n
        Hostel Del Mar was opened at 2008 and last renovated in 2016, we have all brand new furnishing and modern facilities, 4 new and
        beautifully decorated bathrooms with 24h hot water,fully equipped kitchen and open air kitchen as well.\n
        We offer VARIETY of rooms to suit each situation:\n
        Single, Doubles with King size beds,Twins,Triples and Quadruples Ensuite, Dormitory for 6-7 people.\n
        FREE Unlimited Internet and Wi-Fi access,\n
        Cable TV in each private room,\n
        FREE Ironed Bed Linen\n
        FREE Lockers&amp;Luggage Storage after the check-out time\n
        FREE Towels for the private rooms\n
        FREE Maps of Varna\n
        FREE Use of all the facilities (except the washing machine)-kitchen,BBQ, Sun Loungers, hair dryer, Iron....\n
        Situated on picturesque heights of Galata with a great sea view to Varna, St. Konstantin and Helena bay, and the famous
        Kaliakra cape we offer everything you need for a comfortable, enjoyable stay.
    </string>
    <string name="xhostel_hostel">X-Hostel</string>
    <string name="xhostel_address">\"16th\" Str., 19, Evksinograd\nwww.xhostel.com/varna</string>
    <string name="xhostel_description">The World Famous Flagship X Hostel invites You to be part of our Sensational Sizzling Seaside
        Summer! Come join our super social environment where we specialize in good vibes, great atmosphere and cool people. Tired of
        the usual holiday? Come and meet new friends, have fun, party hard and never get bored, or relax in our unique tropical garden
        and then chill in our outdoor area with a cold drink…. We are the closest hostel to the hot springs and Golden Sands: where all
        the real partying is! Varna Rocks! Come and find out for yourself!
        Did you know that more than 257 guests since July 2010 got an X HOSTEL tattoo? It is set in a large and spacious Villa with a
        tropical garden we are a true backpacker’s paradise. Walking distance to great beaches and mineral hot springs. We have fabulous
        outdoor areas with a wood fired oven, BBQ and lots more. Come meet new friends and make life long memories here at X Hostel Varna!
        \n\n
        Located in the upscale neighborhood of Evksinovgrad, we are walking distance to St. Constantine and Elena which is full of restaurants,
        bars, and shopping, ancient monastery, adventure sports, hot springs and more. Near by the hostel are several supermarkets, gas
        station, ATM machine, fish restaurant and more. We are located halfway between downtown Varna and all its splendour and Golden
        Sands party resort to the north.
        \n\n
        Enjoy our large villa, tropical garden, airy rooms and awesome outdoor common areas. Come see why the call Varna Paradise City.
        We have a variety of room types: Two 8 bed dorms, a 6 Bed dorm, another 6 Bed female dorm, Several private rooms for 1,2,3, or 4
        people. We have two kitchens, outdoor and indoor, coffee machine, wood over, large BBQ, tropical garden, sea view terrace. It’s a
        great place to relax and meet people and socialize.
        \n\n
        X Hostel Varna Policies &amp; Conditions:
        \n\n
        Check in from 14:00.\n
        Check out before 11:00.
        \n\n
        Cancellation policy: 24 h before arrival.\n
        Payment upon arrival by cash, credit cards, debit cards. This property might pre-authorize your credit card.
        \n\n
        Taxes included.\n
        Breakfast not included.\n
        \n\n
        General:\n
        24/7 reception.\n
        No curfew.\n
        We do not accept customers younger than 18 years of age.
    </string>
    <string name="avocado_hostel">Avocado Hostel</string>
    <string name="avocado_address">31, \"Maria Luiza\" Blv.</string>
    <string name="avocado_description">RECEPTION IS NOT OPEN 24 HOURS!\n
        Our reception is open from 8:30AM to 23:00PM.\n
        If you arrive earlier or later, please contact us on avocadohostel@gmail.com.
        \n\n
        Avocado Hostel is located on the two floors and the backyard of the beautiful historic building. All our rooms are huge, spacious
        and have air conditioners in them.
        \n\n
        We are located right on the Maria Luiza boulevard, between the Varna Cathedral and the Archaeological Museum, near the central
        square, the Opera and the Tourist Center. Almost all of the city attractions are within walking distance. There are lots of bus
        stops around connecting our hostel to all parts of Varna and its surroundings.
        \n\n
        Avocado Hostel offers: two common area rooms! six bathrooms: two toilets, two showers, and two toilet/shower Bulgarian-style
        combos; cozy kitchen is connected to our big sunny garden - have your (free!) breakfast outside if the weather is nice! our own
        car parking! (space is limited so ask beforehand if it's available for your dates). We have 8 bedrooms: three 8-bed dorms; one
        4-bed dorm; two 2-bed private rooms; two double bed private rooms.
        \n\n
        Avocado Hostel Policies &amp; Conditions:
        \n\n
        Check in from 13:00 to 23:00.\n
        Check out before 11:00.
        \n\n
        Cancellation policy: 24h before arrival.\n
        Payment upon arrival by cash, credit cards, debit carsd. This property may pre-authorise your credit card.\n
        All our guests receive access code for the door and can use it anytime.
        \n\n
        Taxes included.\n
        Breakfast included.
        \n\n
        General:\n
        No curfew.\n
        Child friendly.
    </string>
    <string name="varna_summer_int_music_fest">\"Varna Summer\" International Music Festival</string>
    <string name="varna_summer_int_music_fest_calendar">Jun 24 - Sep 20</string>
    <string name="description">Description:</string>
    <string name="label">Label</string>
    <string name="adress">Address</string>
    <string name="listview_go_icon">go_icon</string>
</resources>